apply plugin: 'com.android.application'

allprojects {
    repositories {
//        mavenLocal()
        mavenCentral()
        maven { url "https://jitpack.io" }
        maven{
            url  'https://oss.sonatype.org/content/repositories/snapshots/'
            name 'OSS-Sonatype'
        }
    }
}

android {
//ndkVersion = "21.0.6113669"
//    ndkVersion '21.0.6113669'
    ndkVersion = "24.0.8215888"

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }
    dataBinding {
        enabled = true
    }

    // enable internal JDK API access at runtime
    tasks.withType(JavaCompile).configureEach {
        options.fork = true
        options.forkOptions.jvmArgs += [
                // essential for butterknife
        '--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',

        // if you need Glide or LomBok
        // these may not be the exact list, but it works for me
        '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
        '--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED',
        ]
    }

//    splits {
//        abi {
//            enable true
//            reset()
////            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a', 'armeabi' //select ABIs to build APKs for
//            include 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a' //select ABIs to build APKs for
//            universalApk true // generate an additional APK that contains all the ABIs
//        }
//    }

    signingConfigs {
        config {
            keyAlias 'key0'
            keyPassword '123456'
            storeFile file('D:\\Ali\\Geoscan\\SDK\\Mobile-UXSDK-Android-master4\\sample\\mapviewer.jks')
            storePassword '123456'
        }
    }
    compileSdk 34
//    buildToolsVersion '33.0.0'
    useLibrary 'org.apache.http.legacy'
    defaultConfig {
        applicationId 'com.oghab.mapviewer'

        versionName '4.0.5'
        versionCode 5

//        Name	    	          Version Number         API level
//        Cupcake	    		        1.5			            3
//        Donut	    		        1.6			            4
//        Eclair				        2.0 - 2.1		        5 - 7
//        Froyo				        2.2 - 2.2.3		        8
//        Gingerbread			        2.3 - 2.3.7		        9 - 10
//        Honeycomb			        3.0 - 3.2.6		        11 - 13
//        Ice Cream Sandwich	        4.0 - 4.0.4		        14 - 15
//        Jelly Bean			        4.1 - 4.3.1		        16 - 18
//        KitKat				        4.4 - 4.4.4		        19 - 20
//        Lollipop			        5.0 - 5.1.1		        21 - 22
//        Marshmallow			        6.0 - 6.0.1		        23
//        Nougat				        7.0 - 7.1.2		        24 - 25
//        Oreo				        8.0 - 8.1		        26 - 27
//        Pie				            9.0		                28
//        Android 10		            10		                29
//        Android 11                  11                      30
//        Android 12                  12                      31

        minSdkVersion 22 // okkk
//        minSdkVersion 22 <=> Android 5.1
//        minSdkVersion 23 <=> Android 6.0
//        minSdkVersion 24 <=> Android 7.0
//        minSdkVersion 25 <=> Android 7.1
//        minSdkVersion 26 <=> Android 8.0
//        minSdkVersion 27 <=> Android 8.1
//        minSdkVersion 28 <=> Android 9.0
//        minSdkVersion 29 <=> Android 10.0
//        minSdkVersion 30 <=> Android 11.0
//        minSdkVersion 31 <=> Android 12.0 // please update android:lost:3.0.4 manifest like this
//                <service android:name="com.mapzen.android.lost.internal.GeofencingIntentService" android:exported="true">
//        minSdkVersion 32 <=> Android 12.1
//        minSdkVersion 33 <=> Android 13.0
//        minSdkVersion 34 <=> Android 14.0

        // targetSdkVersion 22 to use on Emulators (x86) -- very important for Android 8+
//        targetSdkVersion 22
        //noinspection OldTargetApi,EditedTargetSdkVersion
        targetSdkVersion 33 // 33-Android 13 => Android 14+ not compatible with DJI sdk

        multiDexEnabled true
        vectorDrawables.useSupportLibrary = true
        ndk {
//            // On x86 devices that run Android API 23 or above, if the application is targeted with API 23 or
//            // above, FFmpeg lib might lead to runtime crashes or warnings.
//            abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a', 'armeabi'
            abiFilters 'x86', 'x86_64', 'armeabi-v7a', 'arm64-v8a'
        }
        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
        externalNativeBuild {
            cmake {
//                cppFlags "-frtti -fexceptions"
                cppFlags "-fexceptions","-frtti","-std=c++17"
//                cppFlags "-fexceptions","-frtti","-std=c++17","-DBUILD_DEBUG"
                arguments "-DANDROID_STL=c++_shared"
            }
        }
        signingConfig signingConfigs.config
    }
	
    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            ndk {
//                debugSymbolLevel 'FULL' // Package native debug info *and* native symbol table
//                debugSymbolLevel 'SYMBOL_TABLE' // Package native symbol table but not native debug info
                debugSymbolLevel 'NONE' // Don't package native debug info or native symbol table
            }
        }
        debug {
            shrinkResources false
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
            ndk {
                debugSymbolLevel 'FULL' // Package native debug info *and* native symbol table
//                debugSymbolLevel 'SYMBOL_TABLE' // Package native symbol table but not native debug info
//                debugSymbolLevel 'NONE' // Don't package native debug info or native symbol table
            }
        }
        applicationVariants.all { variant ->
            variant.outputs.all {
                def variantName = variant.name
                def versionName = variant.versionName
//                def formattedDate = new Date().format('YYYY_MM_dd_HH_mm_ss')
//                def formattedDate = new Date().format('YYYY_MM_dd_HH_mm')
                def formattedDate = new Date().format('YYYY_MM_dd')
                outputFileName = "MapViewer_${variantName}_${formattedDate}_V${versionName}.apk"
            }
        }
    }
//    dexOptions {
//        javaMaxHeapSize "3g"
//    }
//    lintOptions{
//        abortOnError false
//    }

    sourceSets {
        main {
            jniLibs.srcDir 'libs'
        }
    }

    packagingOptions {
        doNotStrip "*/*/libdjivideo.so"
        doNotStrip "*/*/libSDKRelativeJNI.so"
        doNotStrip "*/*/libFlyForbid.so"
        doNotStrip "*/*/libduml_vision_bokeh.so"
        doNotStrip "*/*/libyuv2.so"
        doNotStrip "*/*/libGroudStation.so"
        doNotStrip "*/*/libFRCorkscrew.so"
        doNotStrip "*/*/libUpgradeVerify.so"
        doNotStrip "*/*/libFR.so"
        doNotStrip "*/*/libDJIFlySafeCore.so"
        doNotStrip "*/*/libdjifs_jni.so"
        doNotStrip "*/*/libsfjni.so"
        doNotStrip "*/*/libDJICommonJNI.so"
        doNotStrip "*/*/libDJICSDKCommon.so"
        doNotStrip "*/*/libDJIUpgradeCore.so"
        doNotStrip "*/*/libDJIUpgradeJNI.so"
        doNotStrip "*/*/libDJIWaypointV2Core.so"
        doNotStrip "*/*/libAMapSDK_MAP_v6_9_2.so"
        doNotStrip "*/*/libDJIMOP.so"
        doNotStrip "*/*/libDJISDKLOGJNI.so"
        exclude 'META-INF/rxjava.properties'
        exclude 'assets/location_map_gps_locked.png'
        exclude 'assets/location_map_gps_3d.png'

        jniLibs {
            keepDebugSymbols += ['*/*/libdjivideo.so', '*/*/libSDKRelativeJNI.so', '*/*/libFlyForbid.so', '*/*/libduml_vision_bokeh.so', '*/*/libyuv2.so', '*/*/libGroudStation.so', '*/*/libFRCorkscrew.so', '*/*/libUpgradeVerify.so', '*/*/libFR.so', '*/*/libDJIFlySafeCore.so', '*/*/libdjifs_jni.so', '*/*/libsfjni.so', '*/*/libDJICommonJNI.so', '*/*/libDJICSDKCommon.so', '*/*/libDJIUpgradeCore.so', '*/*/libDJIUpgradeJNI.so']
        }
        resources {
            excludes += ['META-INF/rxjava.properties', 'META-INF/*.kotlin_module']
        }
    }

    externalNativeBuild {
        cmake {
            version "3.18.1"
            path "src\\main\\cpp\\CMakeLists.txt"
        }
    }
//    androidResources {
//        ignoreAssetsPattern '!MapViewer'
//    }
    lint {
        abortOnError false
        checkReleaseBuilds false
    }
    namespace 'com.oghab.mapviewer'
}

//repositories {
//    flatDir {
//        dirs 'libs'
//    }
//}

dependencies {
    implementation 'androidx.multidex:multidex:2.0.1'
    implementation 'com.squareup:otto:1.3.8'

    implementation ('com.dji:dji-uxsdk:4.16.2', {
        /**
         * Comment the "library-anti-distortion" if your app does need Anti Distortion for Mavic 2 Pro and Mavic 2 Zoom.
         * Comment the "fly-safe-database" if you do not need database for release, or we will download it when DJISDKManager.getInstance().registerApp
         * is called.
         * Both will greatly reducing the size of the APK.
         */
//        exclude module: 'library-anti-distortion'
//        exclude module: 'fly-safe-database'

        /**
         * Uncomment the following line to exclude amap from the app.
         * Note that Google Play Store does not allow APKs that include this library.
         */
        exclude group: 'com.amap.api'
        exclude group: 'com.mapbox.mapboxsdk'
    })
    implementation ('com.dji:dji-sdk:4.17', {
        /**
         * Uncomment the "library-anti-distortion" if your app does not need Anti Distortion for Mavic 2 Pro and Mavic 2 Zoom.
         * Uncomment the "fly-safe-database" if you need database for release, or we will download it when DJISDKManager.getInstance().registerApp
         * is called.
         * Both will greatly reducing the size of the APK.
         */
//        exclude module: 'library-anti-distortion'
//        exclude module: 'fly-safe-database'

        /**
         * Uncomment the following line to exclude amap from the app.
         * Note that Google Play Store does not allow APKs that include this library.
         */
        exclude group: 'com.amap.api'
        exclude group: 'com.mapbox.mapboxsdk'
    })
    compileOnly ('com.dji:dji-sdk-provided:4.17')

    implementation 'androidx.exifinterface:exifinterface:1.3.5'

//    implementation ('com.dji:dji-uxsdk:4.13', {
//        /**
//         * Uncomment the "library-anti-distortion" if your app does not need Anti Distortion for Mavic 2 Pro and Mavic 2 Zoom.
//         * Uncomment the "fly-safe-database" if you need database for release, or we will download it when DJISDKManager.getInstance().registerApp
//         * is called.
//         * Both will greatly reducing the size of the APK.
//         */
//        exclude module: 'library-anti-distortion'
////        exclude module: 'fly-safe-database'
//    })
//    compileOnly ('com.dji:dji-sdk-provided:4.13.1')

    implementation 'com.google.android.material:material:1.6.1'
//    implementation 'com.google.android.gms:play-services:12.0.1'

//    implementation 'org.osmdroid:osmdroid-android:6.1.16'
    implementation 'org.osmdroid:osmdroid-android:6.1.18'
//    implementation 'com.github.MKergall:osmbonuspack:6.9.0'
    api 'com.google.code.gson:gson:2.8.9'

//    implementation 'com.otaliastudios:cameraview:1.6.0'
    api 'com.otaliastudios:cameraview:2.7.2'
    implementation 'com.otaliastudios:transcoder:0.10.4'
    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
    implementation 'com.opencsv:opencsv:5.5'
    implementation 'net.sf.geographiclib:GeographicLib-Java:1.52'
    implementation 'com.maltaisn:icondialog:3.3.0'
    implementation "com.maltaisn:iconpack-default:1.1.0"
//    implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
//    implementation 'com.github.Mohammed-Alaa:ValueCounter:1.0.0'

    // Doc picker
//    implementation 'com.greentoad.turtlebody.docpicker:doc-picker:1.0.1'
//    implementation "org.jetbrains.anko:anko:0.10.8"

    /*for rxjava support*/
//    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'
//    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'

    implementation 'org.greenrobot:eventbus:3.2.0'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.appcompat:appcompat:1.4.2'
    implementation 'androidx.recyclerview:recyclerview:1.2.1'
    implementation 'androidx.annotation:annotation:1.4.0'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    implementation 'androidx.core:core:1.8.0'
    implementation 'androidx.annotation:annotation:1.4.0'
//    implementation 'androidx.core:core-ktx:1.5.0'
    implementation "androidx.sqlite:sqlite:2.2.0"
    implementation 'androidx.documentfile:documentfile:1.0.1'

    implementation "com.anggrayudi:storage:0.9.0"

    implementation 'com.blankj:utilcodex:1.31.1'

    annotationProcessor 'com.jakewharton:butterknife:10.2.3'
    annotationProcessor 'com.jakewharton:butterknife-compiler:10.2.3'

//    implementation 'com.squareup.okhttp:okhttp:2.7.5'
    implementation 'com.squareup.okhttp3:okhttp:4.7.2'

//    implementation 'com.google.maps.android:android-maps-utils:0.4.4'
    implementation 'com.google.maps.android:android-maps-utils:2.2.4'

    implementation 'org.hipparchus:hipparchus-core:1.8'
    implementation 'org.hipparchus:hipparchus-filtering:1.8'
    implementation 'org.hipparchus:hipparchus-fitting:1.8'
    implementation 'org.hipparchus:hipparchus-geometry:1.8'
    implementation 'org.hipparchus:hipparchus-ode:1.8'
    implementation 'org.hipparchus:hipparchus-optim:1.8'
    implementation 'org.hipparchus:hipparchus-stat:1.8'
    implementation 'org.orekit:orekit:10.3.1'

    implementation 'com.ubikgs:android-sensors:1.0.0-alpha9'

    // To conveniently work with AndroidSensors output Flowables
    implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
    implementation 'io.reactivex.rxjava2:rxjava:2.2.21'

    implementation 'org.locationtech.proj4j:proj4j:1.2.3'

    implementation 'com.google.android.gms:play-services-location:21.0.1'

    implementation 'io.github.eltos:simpledialogfragments:3.8.3'

//    implementation 'io.github.chochanaresh:filepicker:0.2.5'
//    implementation 'com.github.jaiselrahman:FilePicker:2.4.1'
//    implementation 'com.github.TutorialsAndroid:FilePicker:v9.0.1'

    implementation 'com.github.K1rakishou:Fuck-Storage-Access-Framework:v1.1.3'

//    implementation 'com.github.gregko:Mini-WebDAV-server-for-Android:v1.6.6'
//    implementation project(path: ':WdServerLib')
//    implementation project(path: ':FilePicker')
    implementation project(path: ':valuecounterlib')
    implementation project(path: ':ColorPicker')
    implementation project(path: ':madlocationmanager')

//    implementation 'com.carto:carto-mobile-sdk:4.4.7@aar'

//    implementation 'com.amap.api:map2d:5.2.0'
//    implementation 'com.amap.api:3dmap:5.5.0'
//    implementation 'com.amap.api:search:5.5.0'
//    implementation 'com.amap.api:location:3.6.1'

//RxJava dependencies
//    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.6.2'
//    implementation 'io.reactivex.rxjava2:rxandroid:2.0.0'
//    implementation 'io.reactivex.rxjava2:rxjava:2.0.2'
//    implementation 'org.reactivestreams:reactive-streams:1.0.0'
//    implementation 'io.reactivex:rxjava-computation-expressions:0.21.0'

    //noinspection GradleCompatible
//    implementation 'com.google.android.gms:play-services-tasks-license:12.0.1'
//    implementation 'com.wnafee:vector-compat:1.0.5'//*******holy grail *******https://github.com/wnafee/vector-compat
//    implementation('com.dji:dji-uxsdk:4.11', {
//        // Uncomment the following line if your app does not need Anti Distortion for
//        // Mavic 2 Pro and Mavic 2 Zoom. It will greatly reducing the size of the APK:
//        exclude module: 'library-anti-distortion'
//    })
//    compileOnly 'com.dji:dji-sdk-provided:4.11'
//    implementation 'com.amap.api:map2d:5.2.0'
//    implementation 'com.amap.api:3dmap:5.5.0'
//    implementation 'com.amap.api:search:5.5.0'
//    implementation 'com.amap.api:location:3.6.1'
//    testImplementation 'junit:junit:4.12'
//    implementation 'org.mapsforge:mapsforge-core:0.8.0'
//    implementation 'org.mapsforge:mapsforge-map:0.8.0'
//    implementation 'org.mapsforge:mapsforge-map-reader:0.8.0'
//    implementation 'org.mapsforge:mapsforge-themes:0.8.0'
//    implementation 'net.sf.kxml:kxml2:2.3.0'
//    implementation 'org.mapsforge:mapsforge-map-android:0.8.0'
//    implementation 'com.caverock:androidsvg:1.2.2-beta-1'
//    implementation 'org.mapsforge:mapsforge-map-android-extras:0.8.0'
//    implementation 'org.mapsforge:mapsforge-map-awt:0.8.0'
//    implementation 'com.metsci.ext.com.kitfox.svg:svg-salamander:0.1.19'
//    implementation 'org.mapsforge:mapsforge-core:0.8.0'
//    implementation 'org.mapsforge:mapsforge-poi:0.8.0'
//    implementation 'org.mapsforge:mapsforge-poi-android:0.8.0'
//    implementation 'org.mapsforge:spatialite-android:0.8.0'
//    implementation 'org.mapsforge:mapsforge-poi-awt:0.8.0'
//    implementation 'org.xerial:sqlite-jdbc:3.16.1'
//    implementation 'org.slf4j:slf4j-android:1.7.25'
//    implementation 'com.github.felHR85:UsbSerial:4.5'
//    implementation 'org.jcodec:jcodec:0.2.2'
//    implementation 'org.jcodec:jcodec-android:0.2.2'
//    implementation 'com.github.bmelnychuk:atv:1.2.9'
    //    implementation 'com.github.santalu:mask-edittext:1.1.1'
    //    implementation 'com.redmadrobot:inputmask:2.3.0'
//    implementation 'com.google.code.gson:gson:2.8.5'
//    implementation 'com.squareup.retrofit:retrofit:1.3.0'
//    implementation 'de.greenrobot:eventbus:2.2.1'
//    implementation 'com.nostra13.universalimageloader:universal-image-loader:1.9.1'
//    implementation 'com.koushikdutta.async:androidasync:2.2.1'
//    implementation 'com.amitshekhar.android:android-networking:1.0.2'
//    implementation 'com.pusher:pusher-java-client:1.6.0'
//    implementation 'com.github.nkzawa:socket.io-client:0.3.0'
//    implementation 'com.esotericsoftware:kryonet:2.22.0-RC1'

//    implementation 'com.android.support:support-annotations:28.0.0'
//    implementation 'androidx.appcompat:appcompat:1.1.0'
//    implementation 'androidx.annotation:annotation:1.1.0'
}

configurations {
//    compile.exclude(group:'', module:'')
}
